############################################################################
# CMake
############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(concert_tutorial)

############################################################################
# Catkin
############################################################################

find_package(catkin REQUIRED)
catkin_package()
