<package>
  <name>concert_tutorial</name>
  <version>0.5.6</version>
  <description>
    Introductory soft tutorial for the rocon concert.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_master</run_depend>
  <run_depend>rocon_service_admin</run_depend>
  <run_depend>rocon_service_turtlesim</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_apps</run_depend>
  <run_depend>rospy_tutorials</run_depend>
  <run_depend>zeroconf_avahi</run_depend> 
</package>

